# xmpp-http-upload

./: .gitignore  README.rst  config.example.py  setup.cfg  setup.py  xhu.py
contrib/: nginx-example-uwsgi.conf  nginx-example.conf  xmpp-http-upload.ini  xmpp-http-upload.openrc  xmpp-http-upload.service
xmpp_http_upload/: xhu.py
