[metadata]
name = xmpp-http-upload
version = 0.4.0
description = "Flask-based HTTP service to handle XMPP HTTP upload requests from Prosody mod_http_upload_external"
long_description = file: README.rst
url = https://github.com/horazont/xmpp-http-upload
author = Jonas Wielicki
author_email = jonas@wielicki.name
license = GPLv3+
keywords = xmpp, http
classifiers =
    "Development Status :: 3 - Alpha"
    "Intended Audience :: Developers"
    "Operating System :: POSIX"
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
    "Programming Language :: Python :: 3 :: Only"
    "Programming Language :: Python :: 3.3"
    "Programming Language :: Python :: 3.4"
    "Topic :: Communications :: Chat"
    "Topic :: Internet :: WWW/HTTP"
    "Topic :: Internet :: XMPP"

[options]
include_package_data = True
packages = find:
install_requires =
    flask
    flask-cors
